@@ -18,9 +18,12 @@ Changes by libtimidity-0.2.0:
 * stream.c, api change: mid_istream_open_mem() no longer accepts an
   autoclose parameter, which was error-prone.
 
-* MidSongOptions, api change: added an uint8 width member just after
-  channels (not used yet, but serves as a padding at least.) added an
-  uint16 reserved padding member just after buffer_size.
+* MidSongOptions, api change:  padded the struct with reserved members
+  for better alignment.
+
+* mid_song_load(): options are now validated.  limited the acceptable
+  sample rate range to 4000-256000.  MID_AUDIO_U16MSB audio format is
+  now handled correctly.
 
 * malloc-safe: upon memory allocation failures, the library either does
   a mid_exit() to free all the allocated memory during init time, or a
